made arithemetic a super topic fixed next topic jump for supertopics decreased the margin on the first subtopic to be inline with the distance between the subtopics

--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -1277,6 +1277,10 @@ a:link.google-analytics-link-track
                 margin-bottom: 10px;
                 line-height: 16px;
 			}
+            #library-content .library-content-header h2.subtopic-1-heading.topic-heading-first {
+                margin-top: 4px;
+			}
+
 			#library-content .library-content-header h2.subtopic-2-heading {
                 font-size: 14px;
                 margin-top: 6px;
